--- a/frontend/app/templates/components/weight-row.hbs
+++ b/frontend/app/templates/components/weight-row.hbs
@@ -1,28 +1,31 @@
 <div class="form-group">
-  {{#if alertBox}}
-    <div class="callout callout-danger">
-      <h4>Are you sure you want to do that?</h4>
-      <p>
-        Clicking yes will delete all weighted grades associated with {{weight.name}}.
-      </p>
-      <p>
-        <button type="button" {{action 'yes'}} class="btn btn-xs btn-success btn-flat" name="button" title="Yes">Yes</button>
-        <button type="button" {{action 'no'}} class="btn btn-xs btn-default btn-flat" name="button" title="No">No</button>
-      </p>
-    </div>
-  {{/if}}
+
   <div class="row">
     <div class="col-xs-6">
       {{input value=weight.name class='form-control input-sm' required='true' placeholder='Enter weight name'}}
     </div>
     <div class="col-xs-5">
-      <div class="input-group">
+      <div {{bind-attr class=":input-group parent.isntValid:has-error"}}>
         {{input value=weight.percentage class='form-control input-sm' required='true' type='number' placeholder='Enter weight percentage'}}
         <div class="input-group-addon">%</div>
       </div>
     </div>
     <div class="col-xs-1 center-button-sm">
-      <button type="button" {{action 'removeWeight' weight}} class="btn btn-xs btn-default btn-flat text-red" name="button" title="Remove">{{fa-icon 'minus-circle'}}</button>
+      <button type="button" {{action 'removeWeight' weight}} {{bind-attr disabled=onlyWeight}} class="btn btn-xs btn-default btn-flat text-red" name="button" title="Remove">{{fa-icon 'minus-circle'}}</button>
     </div>
   </div>
+
 </div>
+
+{{#if alertBox}}
+  <div class="callout callout-danger">
+    <h4>Are you sure you want to do that?</h4>
+    <p>
+      Clicking yes will delete all weighted grades associated with {{weight.name}}.
+    </p>
+    <p>
+      <button type="button" {{action 'yes'}} class="btn btn-sm btn-success btn-flat" name="button" title="Yes">Yes</button>
+      <button type="button" {{action 'no'}} class="btn btn-sm btn-default btn-flat" name="button" title="No">No</button>
+    </p>
+  </div>
+{{/if}}
