--- a/frontend/app/templates/dashboard/courses.hbs
+++ b/frontend/app/templates/dashboard/courses.hbs
@@ -1,6 +1,6 @@
 <div class="content-wrapper">
   <section class="content-header">
-    {{#link-to 'dashboard.courses.new' class="btn btn-sm btn-default btn-flat pull-right" id="newCourse"}}
+    {{#link-to 'dashboard.courses.new' class="btn btn-sm btn-success btn-flat pull-right" id="newCourse"}}
       New Course
     {{/link-to}}
     <h1>
