--- a/frontend/app/templates/dashboard/courses/new.hbs
+++ b/frontend/app/templates/dashboard/courses/new.hbs
@@ -23,6 +23,17 @@
           </div>
         </div>
         <div class="form-group">
+          <label for="semester">Semester</label>
+          {{view "select"
+             content=semesters
+             value=selectedSemester
+             optionLabelPath="content.name"
+             class='form-control'
+             prompt='Please select a semester'
+             required='true'
+          }}
+        </div>
+        <div class="form-group">
           <label for="gradingScale">Grading Scale</label>
           {{view "select"
              content=scales
