--- a/frontend/app/templates/dashboard/index.hbs
+++ b/frontend/app/templates/dashboard/index.hbs
@@ -11,8 +11,8 @@
       <div class="col-lg-3 col-xs-6">
         <div class="small-box bg-aqua">
           <div class="inner">
-            <h3>{{model.courses.length}}</h3>
-            <p>{{h-pluralize model.courses.length "Course" omitCount=true}}</p>
+            <h3>{{courses.length}}</h3>
+            <p>{{h-pluralize courses.length "Course" omitCount=true}}</p>
           </div>
           <div class="icon">
             <i class="ion ion-university"></i>
@@ -25,8 +25,8 @@
       <div class="col-lg-3 col-xs-6">
         <div class="small-box bg-yellow">
           <div class="inner">
-            <h3>{{model.grades.length}}</h3>
-            <p>{{h-pluralize model.grades.length "Grade" omitCount=true}}</p>
+            <h3>{{grades.length}}</h3>
+            <p>{{h-pluralize grades.length "Grade" omitCount=true}}</p>
           </div>
           <div class="icon">
             <i class="ion ion-document"></i>
@@ -40,7 +40,7 @@
       <div class="col-lg-3 col-xs-6">
         <div class="small-box bg-green">
           <div class="inner">
-            <h3>{{model.semesterGpa}}</h3>
+            <h3>{{session.currentUser.semesterGpa}}</h3>
             <p>Semester GPA</p>
           </div>
           <div class="icon">
@@ -51,7 +51,7 @@
       <div class="col-lg-3 col-xs-6">
         <div class="small-box bg-red">
           <div class="inner">
-            <h3>{{model.cumulativeGpa}}</h3>
+            <h3>{{session.currentUser.cumulativeGpa}}</h3>
             <p>Cumulative GPA</p>
           </div>
           <div class="icon">
