--- a/app/views/layouts/ember.html.erb
+++ b/app/views/layouts/ember.html.erb
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Gradebuildr</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <%= render 'favicon' %>
     <%= include_ember_script_tags :frontend %>
     <%= include_ember_stylesheet_tags :frontend %>
     <%= stylesheet_link_tag 'application' %>
