--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -24,15 +24,15 @@
     <div class="row">
       <div class="col-sm-4">
         <h3>Courses</h3>
-        <p>Keep track of your entire college curriculum by adding multiple courses to your highly customizable profile. </p>
+        <p>Keep track of your entire college curriculum by semester and cumulatively by adding multiple courses to your highly customizable profile. </p>
       </div>
       <div class="col-sm-4">
         <h3>Grades</h3>
-        <p>Fill out your assignments, homeworks, and exams to the best of your ability and we will accurately represent these into your current grade. </p>
+        <p>Fill out your assignments, homeworks, and exams to the best of your ability and it will accurately represent these into your current grade. </p>
      </div>
       <div class="col-sm-4">
         <h3>Weights</h3>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. </p>
+        <p>All courses can be weighted to do all the heavy lifting for you to calculate your grades without having to even touch a calculator.</p>
       </div>
     </div>
   </div>
