box color changed

--- a/frontend/app/templates/dashboard/grades.hbs
+++ b/frontend/app/templates/dashboard/grades.hbs
@@ -14,7 +14,7 @@
   </section>
 
   <section class="content">
-    <div class="box box-info">
+    <div class="box box-default">
 
       <div class="box-body">
         <div class="table-responsive">
