--- a/frontend/app/templates/dashboard/courses.hbs
+++ b/frontend/app/templates/dashboard/courses.hbs
@@ -13,7 +13,7 @@
 
   <section class="content">
 
-    <div class="box box-info">
+    <div class="box box-default">
 
       <div class="box-body">
         <div class="table-responsive">
