--- a/frontend/app/templates/dashboard/index.hbs
+++ b/frontend/app/templates/dashboard/index.hbs
@@ -63,7 +63,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <div class="box box-info">
+        <div class="box box-default">
           <div class="box-header with-border">
             <h3 class="box-title">Latest Grades</h3>
             <div class="box-tools pull-right">
