fix click filter action for touch screens

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,9 @@
 
  @import "font-awesome";
 
+ [data-ember-action] {
+   cursor: pointer;
+ }
   .modal {
     overflow: none;
     max-height: none;
