--- a/frontend/app/templates/partials/_header.hbs
+++ b/frontend/app/templates/partials/_header.hbs
@@ -28,7 +28,9 @@
           <ul class="nav navbar-nav">
             {{#unless session.isAuthenticated}}
               <li>
-                <a href="#register" id="register" {{action 'openModal'}} modal-id="registerModal"> Register </a>
+                {{#link-to 'register' id="register"}}
+                  Register
+                {{/link-to}}
               </li>
             {{/unless}}
             {{user-menu}}
@@ -39,13 +41,3 @@
     </nav>
   </header>
 {{/if}}
-
-{{#unless session.isAuthenticated}}
-{{#em-modal-form open-if=openModal configName="bs" id="registerModal" on-submit="register" in-async=async}}
-  {{#em-modal-title}}
-    {{#em-modal-toggler class="close"}}<span aria-hidden="true">×</span><span class="sr-only">Close</span>{{/em-modal-toggler}}
-    <h4 class="modal-title">Register</h4>
-  {{/em-modal-title}}
-  {{render 'users.new'}}
-{{/em-modal-form}}
-{{/unless}}
