--- a/frontend/app/templates/components/user-menu.hbs
+++ b/frontend/app/templates/components/user-menu.hbs
@@ -9,6 +9,7 @@
         {{gravatar-image email=session.currentUser.email class='img-circle'}}
 
         <p>
+          <p>{{session.currentUser.activeSemester}}</p>
           <div class="row">
             <div class="col-xs-6">
               <small><b>Grade Points:</b> {{session.currentUser.gradePoints}}</small>
