--- a/frontend/app/templates/components/grade-row.hbs
+++ b/frontend/app/templates/components/grade-row.hbs
@@ -1,5 +1,6 @@
 <td>{{grade.name}}</td>
 <td>{{grade.course.name}}</td>
+<td>{{grade.course.semester}}</td>
 <td><h4>{{grade.score}} <small>/{{grade.scoreTotal}}</small></h4></td>
 <td><span class="label label-primary">{{grade.weight.name}} {{grade.weight.percentage}}%</span></td>
 {{#unless hideActions}}
