--- a/frontend/app/templates/dashboard/grades.hbs
+++ b/frontend/app/templates/dashboard/grades.hbs
@@ -23,6 +23,7 @@
               <tr>
                 <th>Name</th>
                 <th>Class</th>
+                <th>Semester</th>
                 <th>Score</th>
                 <th>Weight</th>
                 <th>Actions</th>
