--- a/frontend/app/templates/dashboard/index.hbs
+++ b/frontend/app/templates/dashboard/index.hbs
@@ -77,6 +77,7 @@
                   <tr>
                     <th>Name</th>
                     <th>Course</th>
+                    <th>Semester</th>
                     <th>Score</th>
                     <th>Weight</th>
                   </tr>
