--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,13 +16,32 @@
 
  @import "font-awesome";
 
- [data-ember-action] {
-   cursor: pointer;
- }
+   [data-ember-action] {
+     cursor: pointer;
+   }
+
+  #tab a {
+    background-color: rgb(0, 166, 90);
+    color: #fff;
+    border: 2px solid #fff;
+    font-weight: bold;
+    padding: 5px;
+    transform: rotate(-90deg);
+    -webkit-transform: rotate(-90deg);
+    -moz-transform: rotate(-90deg);
+    -o-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+    position: fixed;
+    right: -25px;
+    bottom: 10%;
+    margin-top: -100px;
+    z-index: 1000;
+  }
 
  .navbar-nav>.user-menu>.dropdown-menu>li.user-header {
-  height: 200px;
-}
+    height: 200px;
+  }
 
   .modal {
     overflow: none;
