requests functionality viewable in ui

--- a/frontend/app/templates/dashboard/profile/edit.hbs
+++ b/frontend/app/templates/dashboard/profile/edit.hbs
@@ -51,7 +51,7 @@
   {{/if}}
 {{/em-modal-body}}
 {{#em-modal-footer}}
-  <button type="submit" class="btn btn-primary btn-flat" id="editGrade" {{bind-attr disabled=async}}>Save</button>
+  <button type="submit" class="btn btn-primary btn-flat" id="editUser" {{bind-attr disabled=async}}>Save</button>
 {{/em-modal-footer}}
 
 {{/em-modal-form}}
