--- a/frontend/app/templates/dashboard/profile/requests.hbs
+++ b/frontend/app/templates/dashboard/profile/requests.hbs
@@ -11,7 +11,7 @@
             <button {{bind-attr class=":disabled :btn :btn-lg :btn-flat request.accepted:btn-success:btn-warning"}}>
               {{#if request.accepted}} Accepted {{else}} Pending {{/if}}
             </button>
-            <button type="button" {{bind-attr class=":btn :btn-lg :btn-flat :btn-danger"}}>Delete</button>
+            <button type="button"{{action 'deleteRequest' request}} {{bind-attr class=":btn :btn-lg :btn-flat :btn-danger"}}>Delete</button>
           </span>
         </span>
         <span class="product-description">
