--- a/frontend/app/templates/dashboard/profile.hbs
+++ b/frontend/app/templates/dashboard/profile.hbs
@@ -11,21 +11,18 @@
       <div class="box box-solid">
         <div class="box-header with-border">
           <h3 class="box-title">Manage</h3>
-          <div class="box-tools">
-            <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
-          </div>
         </div>
         <div class="box-body no-padding" style="display: block;">
           <ul class="nav nav-pills nav-stacked">
             {{#link-li}}
               {{#link-to 'dashboard.profile.index'}}
-                {{fa-icon 'user'}} Profile
+                {{fa-icon 'user'}} Edit Profile
               {{/link-to}}
             {{/link-li}}
             <li><a href="#"><i class="fa fa-key"></i> Change Password</a></li>
             {{#link-li}}
               {{#link-to 'dashboard.profile.requests'}}
-                {{fa-icon 'user-plus'}} Send Requests
+                {{fa-icon 'user-plus'}} Sent Requests
               {{/link-to}}
             {{/link-li}}
             <li><a href="#"><i class="fa fa-users"></i> Recieved Requests</a></li>
