--- a/frontend/app/templates/dashboard/profile/index.hbs
+++ b/frontend/app/templates/dashboard/profile/index.hbs
@@ -30,6 +30,6 @@
 </div>
 
 <div class="form-group pull-right">
-  <button type="submit" class="btn btn-default btn-flat" id="cancelUser">Cancel</button>
-  <button type="submit" class="btn btn-primary btn-flat" id="editUser">Save</button>
+  <button type="submit" class="btn btn-default btn-flat" id="cancelUser" {{action 'rollbackUser'}}>Cancel</button>
+  <button type="submit" class="btn btn-primary btn-flat" id="editUser" {{action 'saveUser'}}>Save</button>
 </div>
