--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,6 +20,13 @@
      cursor: pointer;
    }
 
+  .well {
+    border-radius: 0px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+  }
+
+
   #tab a {
     background-color: rgb(0, 166, 90);
     color: #fff;
