student route setup

--- a/frontend/app/templates/partials/_sidebar.hbs
+++ b/frontend/app/templates/partials/_sidebar.hbs
@@ -26,6 +26,11 @@
           {{fa-icon 'file-text-o'}}<span>Grades</span>
         {{/link-to}}
       {{/link-li}}
+      {{#link-li}}
+        {{#link-to 'dashboard.students'}}
+          {{fa-icon 'users'}}<span>Students</span>
+        {{/link-to}}
+      {{/link-li}}
     </ul>
 
   </section>
