--- a/frontend/app/templates/dashboard/profile.hbs
+++ b/frontend/app/templates/dashboard/profile.hbs
@@ -30,8 +30,8 @@
               {{/link-to}}
             {{/link-li}}
             {{#link-li}}
-              {{#link-to 'dashboard.profile.recieved-requests'}}
-                {{fa-icon 'users'}} Recieved Requests
+              {{#link-to 'dashboard.profile.received-requests'}}
+                {{fa-icon 'users'}} Received Requests
               {{/link-to}}
             {{/link-li}}
           </ul>
