--- a/frontend/app/templates/dashboard/profile/received-requests.hbs
+++ b/frontend/app/templates/dashboard/profile/received-requests.hbs
@@ -28,7 +28,7 @@
   {{else}}
     <div class="text-center well">
       <p class="lead">
-        No requests recieved.
+        No requests received.
       </p>
     </div>
   {{/each}}
