student show page

--- a/frontend/app/templates/dashboard/grades.hbs
+++ b/frontend/app/templates/dashboard/grades.hbs
@@ -30,7 +30,7 @@
               </tr>
             </thead>
             <tbody>
-              {{#each grade in pagedContent}}
+              {{#each pagedContent as |grade|}}
                 {{grade-row parent=this grade=grade}}
               {{else}}
                 <tr class='lead'>
