--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,6 +26,23 @@
     box-shadow: none;
   }
 
+  li.header > img {
+    width: 100%;
+    max-width: 25px;
+    height: auto;
+  }
+
+  .tab-pane {
+    .dl-horizontal {
+      dt {
+        min-width: 20%;
+      }
+      dd {
+        margin-left: 25%;
+      }
+    }
+
+  }
 
   #tab a {
     background-color: rgb(0, 166, 90);
