--- a/frontend/app/templates/dashboard/students/show.hbs
+++ b/frontend/app/templates/dashboard/students/show.hbs
@@ -57,6 +57,7 @@
     <li class="active"><a href="#tab_1-1" data-toggle="tab">Courses</a></li>
     <li><a href="#tab_2-2" data-toggle="tab">Grades</a></li>
     <li class="pull-left header">
+      <button type="button" name="button" class='btn btn-xs btn-default btn-flat' {{action 'back'}}>{{fa-icon 'reply'}}</button>
       {{gravatar-image email=model.email class='img-circle'}}
       {{model.name}}
     </li>
