--- a/frontend/app/templates/dashboard/students/show.hbs
+++ b/frontend/app/templates/dashboard/students/show.hbs
@@ -58,7 +58,7 @@
     <li><a href="#tab_2-2" data-toggle="tab">Grades</a></li>
     <li class="pull-left header">
       <button type="button" name="button" class='btn btn-xs btn-default btn-flat' {{action 'back'}}>{{fa-icon 'reply'}}</button>
-      {{gravatar-image email=model.email class='img-circle'}}
+      {{gravatar-image email=model.email class='img-circle' title=model.email}}
       {{model.name}}
     </li>
     <li class='header'><span class='label label-default' title='Active Semester'>{{model.activeSemester}}</span></li>
