--- a/frontend/app/templates/register.hbs
+++ b/frontend/app/templates/register.hbs
@@ -1,13 +1,9 @@
-{{#em-modal-form open-if=openModal configName="bs" id="registerModal" on-submit="register" in-async=async}}
+{{#em-modal-form open-if=openModal is-open=isOpen configName="bs" id="registerModal" on-submit="register"}}
   {{#em-modal-title}}
     {{#em-modal-toggler class="close"}}<span aria-hidden="true">×</span><span class="sr-only">Close</span>{{/em-modal-toggler}}
     <h4 class="modal-title">Register</h4>
   {{/em-modal-title}}
   {{#em-modal-body}}
-    {{#if model.async}}
-        Submitting, please wait...
-    {{else}}
-
     <form role="form">
       <div class="box-body">
         <div class="form-group">
@@ -55,9 +51,8 @@
         </div> --}}
       </div>
     </form>
-    {{/if}}
   {{/em-modal-body}}
   {{#em-modal-footer}}
-    <button type="submit" class="btn btn-primary btn-flat" id="createUser" {{bind-attr disabled=async}} {{action "createUser"}}>Submit</button>
+    <button type="submit" class="btn btn-primary btn-flat" id="createUser" {{action "createUser"}}>Submit</button>
   {{/em-modal-footer}}
 {{/em-modal-form}}
