--- a/frontend/app/templates/dashboard/profile.hbs
+++ b/frontend/app/templates/dashboard/profile.hbs
@@ -24,11 +24,13 @@
                 {{fa-icon 'key'}} Change Password
               {{/link-to}}
             {{/link-li}}
-            {{#link-li}}
-              {{#link-to 'dashboard.profile.requests'}}
-                {{fa-icon 'user-plus'}} Sent Requests
-              {{/link-to}}
-            {{/link-li}}
+            {{#if session.currentUser.isDirector}}
+              {{#link-li}}
+                {{#link-to 'dashboard.profile.requests'}}
+                  {{fa-icon 'user-plus'}} Sent Requests
+                {{/link-to}}
+              {{/link-li}}
+            {{/if}}
             {{#link-li}}
               {{#link-to 'dashboard.profile.received-requests'}}
                 {{fa-icon 'users'}} Received Requests
