--- a/frontend/app/templates/partials/_sidebar.hbs
+++ b/frontend/app/templates/partials/_sidebar.hbs
@@ -26,11 +26,13 @@
           {{fa-icon 'file-text-o'}}<span>Grades</span>
         {{/link-to}}
       {{/link-li-toggle}}
-      {{#link-li-toggle}}
-        {{#link-to 'dashboard.students'}}
-          {{fa-icon 'users'}}<span>Students</span>
-        {{/link-to}}
-      {{/link-li-toggle}}
+      {{#if session.currentUser.isDirector}}
+        {{#link-li-toggle}}
+          {{#link-to 'dashboard.students'}}
+            {{fa-icon 'users'}}<span>Students</span>
+          {{/link-to}}
+        {{/link-li-toggle}}
+      {{/if}}
     </ul>
 
   </section>
