stripe support in ember

--- a/app/views/layouts/ember.html.erb
+++ b/app/views/layouts/ember.html.erb
@@ -13,5 +13,6 @@
   <body class="skin-black">
     <%= yield %>
   </body>
+  <script src="https://checkout.stripe.com/checkout.js"></script>
   <%= render 'analytics' %>
 </html>
